<resources>
    <string name="app_name">Enfermedades Cardiovasculares</string>
    <string name="app_name_2">ECV</string>

    <string name="edit_message_User">Usuario</string>
    <string name="edit_message_Password">Contraseña</string>
    <string name="edit_message_Repeat_Password">Repetir contraseña</string>
    <string name="edit_check_contraseña">¿Mostrar contraseña?</string>

    <string name="button_login">Iniciar sesión</string>
    <string name="button_signup">Registrate</string>
    <string name="button_login2">Ya tienes cuenta? Inicia sesión</string>
    <string name="button_create">Crear cuenta</string>

    <string name="edit_message_Name">Nombre</string>
    <string name="edit_message_Surname">Apellidos</string>
    <string name="edit_message_Number">Nº Colegiado</string>
    <string name="edit_message_Telephone">Telefono</string>
    <string name="edit_message_Email">Mail</string>

    <string name="button_intro">Introducción</string>
    <string name="button_autores">Sobre nosotros</string>
    <string name="button_start">Comenzar</string>
    <string name="imagen_logo">Comenzar</string>

    <string name="button_new_patient">Nuevo registro</string>
    <string name="button_patients">Pacientes guardados</string>
    <string name="button_algorithms">Algoritmos Dx</string>
    <string name="button_profile">Mi perfil</string>
    <string name="button_drugs">Fármacos</string>

    <string name="button_validate">Validar</string>
    <string name="button_refused">Rechazar</string>

    <string name="button_refused_all">Eliminar todos</string>

    <string name="button_add">Añadir</string>

    <string name="button_save">Guardar cambios</string>
    <string name="button_delete">Eliminar paciente</string>

    <string name="button_tratamiento">Tratamiento</string>
    <string name="button_riesgo">Calcular riesgo cardiovascular</string>

    <string name="button_col">Colesterol</string>
    <string name="button_calcular_HTA">Calcular HTA</string>
    <string name="button_calcular_IMC">Calcular IMC</string>
    <string name="button_calcular_LDL">Calcular LDL</string>
    <string name="button_calcular_riesgo_cardiovascular">Calcular Riesgo</string>

    <string name="button_calcular_diabetes">Calcular Diabetes</string>
    <string name="button_calcular_icm">Calcular IMC</string>
    <string name="button_calcular_hta">Calcular HTA</string>
    <string name="button_calcular_tabaquismo">Calcular Tabaquismo</string>

    <string name="button_pacientes_guardados">Pacientes</string>
    <string name="button_medicos_guardados">Médicos</string>

    <string name="menu_option_share">Compartir</string>
    <string name="hint_password">Introduce un Nº Colegiado:</string>

    <string name="search">Busqueda</string>
    <string name="hint_search1">Identificador:</string>
    <string name="hint_search2">Sexo:</string>
    <string name="hint_search3">Edad:</string>

    <string name="tabaquismo">Tabaquismo</string>
    <string name="diabetes">Diabetes</string>
    <string name="colesterol">Colesterol</string>
    <string name="hta">HTA</string>
    <string name="imc">IMC</string>
    <string name="tratamiento">Tratamiento</string>

    <string name="pdf">Descargar PDF</string>

</resources>

