<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:fitsSystemWindows="true">

    <Button android:id="@+id/button_autores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_autores"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button_empezar"
        android:layout_alignStart="@+id/button_empezar" />

    <Button android:id="@+id/button_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_intro"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/button_autores"
        android:layout_alignLeft="@+id/button_autores"
        android:layout_alignStart="@+id/button_autores"/>

    <Button android:id="@+id/button_empezar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:fontFamily="sans-serif-medium"
        android:layout_above="@+id/button_intro"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <ImageView android:src="@mipmap/icon3"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"

        android:contentDescription="@string/imagen_logo"
        android:layout_above="@+id/button_empezar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
