<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_new_patient"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:text="@string/button_new_patient"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:drawableBottom="@mipmap/new_patient"
        android:layout_marginTop="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="50dp"/>

    <Button android:id="@+id/button_patients"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:text="@string/button_patients"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:drawableBottom="@mipmap/patients"
        android:layout_marginTop="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/button_new_patient"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="200dp"/>

    <Button android:id="@+id/button_algorithms"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:text="@string/button_algorithms"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:drawableBottom="@mipmap/dx"
        android:layout_marginTop="205dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/button_new_patient"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="50dp"/>

    <Button android:id="@+id/button_profile"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:text="@string/button_profile"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:drawableBottom="@mipmap/profile"
        android:layout_marginTop="335dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/button_new_patient"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="125dp"/>

    <Button android:id="@+id/button_drugs"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:text="@string/button_drugs"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:drawableBottom="@mipmap/drugs"
        android:layout_marginTop="205dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/button_new_patient"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="200dp"/>

</RelativeLayout>