<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_search1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLength="9"
            android:inputType="textCapCharacters"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="85dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_search2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp">

        <EditText
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLength="9"
            android:inputType="numberSigned"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="155dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_search3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/id"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="115dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/RB_genero_hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:text="Masculino"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RB_genero_mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Femenino"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RadioGroup>


</FrameLayout>